node-app/kube-manifest.yml
apiVersion: v1
kind: Service
metadata:
  name: test-app-with-manifest-lb
spec:
  selector:
    test-app: test-app-with-manifest
  ports:
    - port: 80
      targetPort: 3000
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app-with-manifest
spec:
  replicas: 4
  selector:
    matchLabels:
      test-app: test-app-with-manifest
  template:
    metadata:
      labels:
        test-app: test-app-with-manifest
    spec:
      containers:
        - name: test-app
          image: localhost:5000/test-app-k8s:latest # for this docker run -d -p 5000:5000 --restart=always --name registry registry:2 should be run (REGISTRY)
          # Then the image should be built like: docker build . -t localhost:5000/{image name}
          # And should be pushed to the registry; docker push localhost:5000/{image name}
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
