node-app/nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: test-api-k8s.com  # Cambia esto al dominio que quieras usar
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-app-with-manifest-lb
            port:
              number: 80
